# PBM-prac

./: .gitignore  2026-04-05-TIL.md  2026-05-06-TIL.md  pyproject.toml  session-ddd49213-85d2-467f-840a-2a98e908efd4.json  session-df793aba-5d1c-4236-b8dc-50e67a4b5bbf.json
src/: policy_server.py
src/ap2_pbm_handson.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/constraints/: __init__.py  registry.py  schema.py
src/constraints/evaluators/: __init__.py  post.py  pre.py
src/mandate/: __init__.py  client.py  factory.py
src/x402/: __init__.py  client.py  facilitator.py  server.py
tests/: conftest.py
tests/integration/: test_failure_scenarios.py  test_happy_path.py  test_open_vs_closed_baseline.py
tests/unit/: test_post_evaluators.py  test_pre_evaluators.py
