[project]
name = "ap2-pbm-handson"
version = "0.1.0"
description = "AP2 Mandate x Custom Constraints x x402 hands-on (PoC)"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.6",
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "httpx>=0.27",
    "cryptography>=42.0",
    "python-dateutil>=2.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "freezegun>=1.4",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
asyncio_mode = "auto"
